--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,8 +5,8 @@ name: Build macOS App
 
 on:
   push:
-    tags:
-      - 'v*'  # 当推送以 v 开头的标签时触发（如 v1.0.0）
+    branches:
+      - main
 
 jobs:
   build-macos:
