--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,7 +10,12 @@ on:
 
 jobs:
   build-macos:
-    runs-on: macos-latest  # 使用 macOS 最新环境
+    runs-on: macos-latest
+
+    # 显式声明权限，确保有权限创建 release 和上传资产
+    permissions:
+      contents: write  # 允许发布 release 和上传资产
+      packages: write  # 如果需要发布到 GitHub Packages
 
     steps:
       # 1. 检出代码
@@ -21,7 +26,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'  # 替换为你的 Python 版本，如 3.9
+          python-version: '3.9'  # 替换为你的 Python 版本
 
       # 3. 安装依赖
       - name: Install dependencies
@@ -35,25 +40,27 @@ jobs:
         run: |
           pyinstaller --onefile --windowed main.py
 
-      # 5. 上传构建结果
+      # 5. 上传构建结果（可选）
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: my-mac-app
           path: dist/
 
-      # 6. 可选：发布到 GitHub Releases
+      # 6. 创建 GitHub Release
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
-          body: |
-            Automated release for macOS app
+          body: Automated release for macOS app
           draft: false
           prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 显式传递 GITHUB_TOKEN
 
+      # 7. 上传 Release 资产
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         with:
@@ -61,3 +68,5 @@ jobs:
           asset_path: dist/main.app
           asset_name: main.app
           asset_content_type: application/octet-stream
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 显式传递 GITHUB_TOKEN
