--- a/.github/workflows/python-linux-app.yml
+++ b/.github/workflows/python-linux-app.yml
@@ -38,7 +38,7 @@ jobs:
       # 5. 打包 Python 应用（使用 PyInstaller）
       - name: Build with PyInstaller
         run: |
-          pyinstaller --onefile --noconfirm --icon==logo1.ico 4.0（修复版）.py
+          pyinstaller --onefile --noconfirm --icon==logo1.ico main.py
 
       # 6. 上传构建结果（Artifacts）
       - name: Upload Build Artifact
