--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: 安装依赖
       run: |
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pytest pytest-qt
     - name: 执行测试
