--- a/.github/workflows/python-linux-app.yml
+++ b/.github/workflows/python-linux-app.yml
@@ -46,4 +46,5 @@ jobs:
         with:
           name: my-linux-app  # 构建结果名称
           path: dist/main     # PyInstaller 生成的 Linux 可执行文件路径
+          retention-days: 1
           
